# wasm-game-of-life

./: Cargo.toml  LICENSE_MIT  Makefile.toml  README.md  bootstrap.js
.github/workflows/: ci.yml  release.yml
docs/: 0.bootstrap.js  bootstrap.js  index.html  webpack.config.js
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
