[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Brian Bruggeman <1350114+brianbruggeman@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# Disable for production; useful for dev
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.48"
rand = "0.8.3"
getrandom = { version = "0.2.2", features = ["js"] } 
wasm-bindgen = "0.2.63"
# Slow but tiny
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
